--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "inertia-client",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@babel/core": "7.12.3",
     "@nextui-org/react": "^1.0.2-beta.2",
