--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,16 +20,11 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Install dependencies
-      - uses: borales/actions-yarn@v2.3.0
-        with:
-          cmd: install
+        run: npm run install
       
       - name: Tests
-      - uses: borales/actions-yarn@v2.3.0
-        with:
-          cmd: test
+        run: npm run test
       
       - name: Build
-      - uses: borales/actions-yarn@v2.3.0
-        with:
-          cmd: build
+        run: npm run build
+          
