--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,12 +5,10 @@
         "node": true
     },
     "extends": [
-        "eslint:recommended"
+        "eslint:recommended",
+		"plugin:react/recommended"
     ],
     "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
 		"sourceType": "module",
         "ecmaVersion": 12
     },
