--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "inertia-client",
-  "private": true,
+  "private": false,
   "scripts": {
-	"dev": "next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-	"lint:check": "eslint .",
-	"lint:fix": "eslint --fix ."
+    "lint:check": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.2-beta.3",
     "next": "12.0.10",
+    "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.16",
     "@types/react": "17.0.39",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "typescript": "4.5.5"
-  }
+  },
+  "license": "GPL-3.0"
 }
