--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,18 @@
 {
 	"presets": ["next/babel"],
 	"plugins": [
-	  [
-		"module-resolver",
-		{
-		  "root": ["./"],
-		  "alias": {
-			"@components": "./src/components",
-			"@theme": "./src/theme",
-			"@cards": "./src/components/cards"
-		  }
-		}
-	  ]
-	]
-  }
-  
+		[
+			"module-resolver",
+			{
+				"root": ["./"],
+				"alias": {
+					"@components": "./src/components",
+					"@theme": "./src/theme",
+					"@cards": "./src/components/cards"
+				}
+			}
+		]
+	],
+	"ignore": "**/node_modules/**"
+}
+	
