--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "tld-enum": "^2.0.6"
   },
   "devDependencies": {
     "@types/node": "17.0.16",
@@ -24,5 +25,8 @@
     "eslint-config-next": "12.0.10",
     "typescript": "4.5.5"
   },
-  "license": "GPL-3.0"
+  "license": "GPL-3.0",
+  "inertiaCfg": {
+	  "proxyLocation": "http://inertia.up.railway.app/"
+  }
 }
