--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,15 +6,13 @@
     },
     "extends": [
         "eslint:recommended",
-		"plugin:react/recommended"
+		"next/core-web-vitals"
     ],
     "parserOptions": {
 		"sourceType": "module",
         "ecmaVersion": 12
     },
-    "plugins": [
-        "react"
-    ],
+    "plugins": [],
     "rules": {
         "indent": [
             "warn",
@@ -31,10 +29,5 @@
 
 		"no-unused-vars": ["off"],
 		"no-undef": ["off"]
-    },
-	"settings": {
-		"react": {
-			"version": "detect"
-		}
-	}
+    }
 }
