--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint:check": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.2-beta.3",
+    "imagemin-mozjpeg": "^10.0.0",
     "next": "12.0.10",
+    "next-optimized-images": "^2.6.2",
     "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "tld-enum": "^2.0.6"
+    "responsive-loader": "^2.3.0",
+    "sharp": "^0.30.1",
+    "tld-enum": "^2.0.6",
+    "webp-loader": "^0.6.0"
   },
   "devDependencies": {
     "@types/node": "17.0.16",
@@ -27,6 +32,6 @@
   },
   "license": "GPL-3.0",
   "inertiaCfg": {
-	  "proxyLocation": "http://inertia.up.railway.app/"
+    "proxyLocation": "http://inertia.up.railway.app"
   }
 }
