--- a/.github/workflows/inertia-deploy.yml
+++ b/.github/workflows/inertia-deploy.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Export
         run: npm run export
 
+      - name: nojekyll file
+        run: touch out/.nojekyll
+
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
