--- a/package.json
+++ b/package.json
@@ -29,8 +29,5 @@
     "eslint-config-next": "12.0.10",
     "typescript": "4.5.5"
   },
-  "license": "GPL-3.0",
-  "inertiaCfg": {
-    "proxyLocation": "http://inertia.up.railway.app"
-  }
+  "license": "GPL-3.0"
 }
