--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export"
+    "export": "next export",
+    "update": "yarn upgrade --latest"
   },
   "dependencies": {
-    "@nextui-org/react": "^1.0.2-beta.3",
+    "@nextui-org/react": "^1.0.3-beta.5",
     "imagemin-mozjpeg": "^10.0.0",
-    "next": "12.0.10",
-    "next-themes": "^0.0.15",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.1.0",
+    "next-themes": "^0.1.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "responsive-loader": "^2.3.0",
     "sharp": "^0.30.1",
@@ -22,12 +23,12 @@
     "webp-loader": "^0.6.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.16",
-    "@types/react": "17.0.39",
+    "@types/node": "17.0.22",
+    "@types/react": "17.0.41",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10",
-    "typescript": "4.5.5"
+    "eslint": "8.11.0",
+    "eslint-config-next": "12.1.0",
+    "typescript": "4.6.2"
   },
   "license": "GPL-3.0"
 }
