--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
         ],
 
 		"no-unused-vars": ["off"],
-		"no-undef": ["off"]
+		"no-undef": ["off"],
+		"no-constant-condition": ["off"]
     }
 }
