--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.3-beta.5",
+    "axios": "^0.26.1",
     "imagemin-mozjpeg": "^10.0.0",
     "next": "^12.1.0",
     "next-themes": "^0.1.1",
