--- a/.gitignore
+++ b/.gitignore
@@ -75,9 +75,6 @@ typings/
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
-# Next.js build output
-.next
-
 # Nuxt.js build / generate output
 .nuxt
 dist
@@ -130,7 +127,6 @@ yarn-error.log*
 .replit
 replit.nix
 
-
-# Next.js
-.next
-out/
+# Next.js build output
+.next/*
+!.next/cache
