--- a/.github/workflows/inertia-deploy.yml
+++ b/.github/workflows/inertia-deploy.yml
@@ -20,9 +20,12 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      
+
       - name: Install yarn
         run: corepack enable
+
+      - name: Config (Prefix)
+        run: yarn run gh-pages-config
 
       - name: Install dependencies
         run: yarn install
