--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next export",
-    "update": "yarn upgrade --latest"
+    "update": "yarn upgrade --latest",
+	"gh-pages-config": "node ./.gh-pages-setup.js"
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.3-beta.5",
