--- a/src/config/baseConfig.json
+++ b/src/config/baseConfig.json
@@ -1,7 +1,7 @@
 {
 	"prefix": "",
 	"backendURL": "https://inertia.up.railway.app",
-	"umamiAPI": "http://inertia-umami-analytics.up.railway.app",
+	"umamiAPI": "http://inertia-analytics.vercel.app/",
 	"umamiUsername": "",
 	"umamiPassword": ""
 }
