--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "gh-pages-config": "node ./.gh-pages-setup.js"
   },
   "dependencies": {
-    "@nextui-org/react": "^1.0.6-beta.5",
-    "axios": "^0.26.1",
+    "@nextui-org/react": "^1.0.0-beta.6",
+    "axios": "^0.27.1",
     "imagemin-mozjpeg": "^10.0.0",
     "next": "^12.1.0",
     "next-themes": "^0.1.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.3.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -26,12 +27,13 @@
     "webp-loader": "^0.6.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.22",
-    "@types/react": "17.0.41",
+    "@swc/core": "^1.2.172",
+    "@types/node": "17.0.29",
+    "@types/react": "18.0.8",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0",
-    "typescript": "4.6.2"
+    "eslint": "8.14.0",
+    "eslint-config-next": "12.1.5",
+    "typescript": "4.6.3"
   },
   "license": "GPL-3.0"
 }
