--- a/package.json
+++ b/package.json
@@ -1,39 +1,35 @@
 {
-  "name": "inertia-client",
-  "private": false,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "export": "next export",
-    "update": "yarn upgrade --latest",
-    "gh-pages-config": "node ./.gh-pages-setup.js"
-  },
-  "dependencies": {
-    "@nextui-org/react": "^1.0.0-beta.6",
-    "axios": "^0.27.1",
-    "imagemin-mozjpeg": "^10.0.0",
-    "next": "^12.1.0",
-    "next-themes": "^0.1.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.3.0",
-    "react-cookie": "^4.1.1",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "responsive-loader": "^2.3.0",
-    "sharp": "^0.30.1",
-    "tld-enum": "^2.0.6",
-    "webp-loader": "^0.6.0"
-  },
-  "devDependencies": {
-    "@swc/core": "^1.2.172",
-    "@types/node": "17.0.29",
-    "@types/react": "18.0.8",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5",
-    "typescript": "4.6.3"
-  },
-  "license": "GPL-3.0"
+	"name": "inertia-client",
+	"private": false,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"export": "next export",
+		"update": "yarn upgrade --latest",
+		"gh-pages-config": "node ./.gh-pages-setup.js"
+	},
+	"dependencies": {
+		"@nextui-org/react": "^1.0.0-beta.9",
+		"cookie": "^0.5.0",
+		"cookie-cutter": "^0.2.0",
+		"cookies-next": "^2.0.4",
+		"next": "^12.1.0",
+		"next-themes": "^0.2.0",
+		"react": "^17.0.2",
+		"react-bootstrap": "^2.3.0",
+		"react-cookie": "^4.1.1",
+		"react-dom": "^17.0.2",
+		"react-icons": "^4.3.1",
+		"tld-enum": "^2.0.6"
+	},
+	"devDependencies": {
+		"@types/node": "17.0.42",
+		"@types/react": "18.0.12",
+		"eslint": "8.17.0",
+		"eslint-config-next": "12.1.6",
+		"typescript": "4.7.3"
+	},
+	"license": "GPL-3.0"
 }
