--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
 	},
 	"dependencies": {
 		"@nextui-org/react": "^1.0.0-beta.9",
-		"cookie": "^0.5.0",
-		"cookie-cutter": "^0.2.0",
-		"cookies-next": "^2.0.4",
 		"next": "^12.1.0",
 		"next-themes": "^0.2.0",
 		"react": "^17.0.2",
@@ -22,7 +19,7 @@
 		"react-cookie": "^4.1.1",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.3.1",
-		"tld-enum": "^2.0.6"
+		"validator": "^13.7.0"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.42",
