--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"react": "^17.0.2",
 		"react-bootstrap": "^2.3.0",
 		"react-cookie": "^4.1.1",
+		"react-device-detect": "^2.2.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.3.1",
 		"validator": "^13.7.0"
