--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 		"@types/react": "18.0.12",
 		"eslint": "8.17.0",
 		"eslint-config-next": "12.1.6",
+		"eslint-import-resolver-typescript": "^3.2.5",
+		"eslint-plugin-import": "^2.26.0",
 		"typescript": "4.7.3"
 	},
 	"license": "GPL-3.0"
