--- a/.github/workflows/vercel-ci.yml
+++ b/.github/workflows/vercel-ci.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: release
+          submodules: recursive
 
       - name: Install Vercel CLI
         run: npm install --global vercel@canary
