login works now

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,15 +18,10 @@
 		"jsx": "preserve",
 		"incremental": true,
 		"paths": {
-			"@components/*": [
-				"./src/components/*"
-			],
-			"@utils/*": [
-				"./src/utils/*"
-			],
-			"@props": [
-				"./src/props"
-			]
+			"@components/*": [ "./src/components/*" ],
+			"@utils/*": [ "./src/utils/*" ],
+			"@props": [ "./src/props" ],
+			"@db": [ "./src/db" ],
 		},
 		"strict": true
 	},
