--- a/package.json
+++ b/package.json
@@ -4,31 +4,29 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"build:github": "node ./.gh-builder.js",
 		"start": "next start",
 		"lint": "next lint --fix",
 		"export": "next export",
-		"postinstall": "prisma generate && prisma db push",
-		"update": "yarn upgrade --latest"
+		"postinstall": "prisma generate && prisma db push"
 	},
 	"dependencies": {
 		"@heroicons/react": "^2.0.13",
 		"@next-auth/prisma-adapter": "^1.0.5",
-		"@nextui-org/react": "1.0.0-beta.10",
-		"@prisma/client": "^4.5.0",
+		"@nextui-org/react": "^1.0.0-beta.10",
+		"@prisma/client": "^4.6.1",
 		"cuid": "^2.1.8",
 		"dotenv": "^16.0.3",
-		"google-auth-library": "^8.6.0",
+		"google-auth-library": "^8.7.0",
 		"js-sha256": "^0.9.0",
 		"net": "^1.0.2",
-		"next": "12",
-		"next-auth": "^4.16.2",
+		"next": "^12.3.4",
+		"next-auth": "4.15.1",
 		"next-themes": "^0.2.1",
-		"node-fetch": "^3.2.10",
+		"node-fetch": "^3.3.0",
 		"nodemailer": "^6.8.0",
 		"nodemailer-html-to-text": "^3.2.0",
 		"react": "^18.2.0",
-		"react-bootstrap": "^2.5.0",
+		"react-bootstrap": "^2.6.0",
 		"react-cookie": "^4.1.1",
 		"react-device-detect": "^2.2.2",
 		"react-dom": "^18.2.0",
@@ -46,7 +44,7 @@
 		"eslint-import-resolver-typescript": "^3.5.2",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-simple-import-sort": "^8.0.0",
-		"prisma": "^4.5.0",
+		"prisma": "^4.6.1",
 		"typescript": "4.8.4"
 	},
 	"license": "GPL-3.0"
