--- a/.github/workflows/vercel-ci-preview.yml
+++ b/.github/workflows/vercel-ci-preview.yml
@@ -22,14 +22,11 @@ jobs:
       - name: Use pnpm
         run: corepack enable
 
-      - name: Install Vercel CLI
-        run: pnpm i -g vercel@canary
-
       - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_SECRETKEY }}
+        run: pnpm exec vercel@canary pull --yes --environment=preview --token=${{ secrets.VERCEL_SECRETKEY }}
 
       - name: Build Project Artifacts
-        run: vercel build --token=${{ secrets.VERCEL_SECRETKEY }}
+        run: pnpm exec vercel@canary build --token=${{ secrets.VERCEL_SECRETKEY }}
 
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_SECRETKEY }}
+        run: pnpm exec vercel@canary deploy --prebuilt --token=${{ secrets.VERCEL_SECRETKEY }}
