--- a/.github/workflows/vercel-ci-preview.yml
+++ b/.github/workflows/vercel-ci-preview.yml
@@ -20,13 +20,13 @@ jobs:
           submodules: recursive
 
       - name: Use pnpm
-        run: corepack enable && pnpm i vercel@canary
+        run: corepack enable && pnpm setup && pnpm i -g vercel@canary
 
       - name: Pull Vercel Environment Information
-        run: pnpm exec vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_SECRETKEY }}
+        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_SECRETKEY }}
 
       - name: Build Project Artifacts
-        run: pnpm exec vercel build --token=${{ secrets.VERCEL_SECRETKEY }}
+        run: vercel build --token=${{ secrets.VERCEL_SECRETKEY }}
 
       - name: Deploy Project Artifacts to Vercel
-        run: pnpm exec vercel deploy --prebuilt --token=${{ secrets.VERCEL_SECRETKEY }}
+        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_SECRETKEY }}
