--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
 		"react-icons": "^4.6.0",
 		"segfault-handler": "^1.3.0",
 		"tls": "^0.0.1",
-		"validator": "^13.7.0",
-		"vercel": "^28.6.0"
+		"validator": "^13.7.0"
 	},
 	"devDependencies": {
 		"@types/node": "18.11.9",
