--- a/.github/workflows/vercel-ci-preview.yml
+++ b/.github/workflows/vercel-ci-preview.yml
@@ -19,8 +19,7 @@ jobs:
           ref: main
           submodules: recursive
 
-      - name: Use pnpm
-        run: corepack enable && pnpm setup && pnpm i -g vercel@canary
+      - name: npm i -g vercel@canary
 
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_SECRETKEY }}
