--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"net": "^1.0.2",
 		"next": "^12.3.4",
 		"next-auth": "4.15.1",
+		"next-mdx-remote": "^4.2.0",
 		"next-themes": "^0.2.1",
 		"node-fetch": "^3.3.0",
 		"nodemailer": "^6.8.0",
