--- a/.github/workflows/vercel-ci-prod.yml
+++ b/.github/workflows/vercel-ci-prod.yml
@@ -10,7 +10,7 @@ on:
       - release
 
 jobs:
-  Deploy-Prod:
+  Deploy-Preview:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,17 +19,14 @@ jobs:
           ref: release
           submodules: recursive
 
-      - name: Install pnpm
-        run: corepack enable
-
       - name: Install Vercel CLI
-        run: pnpm i -g vercel@canary
+        run: npm i -g vercel@canary
 
       - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_SECRETKEY }}
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_SECRETKEY }}
 
       - name: Build Project Artifacts
-        run: vercel build --token=${{ secrets.VERCEL_SECRETKEY }}
+        run: vercel build --prod --token=${{ secrets.VERCEL_SECRETKEY }}
 
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_SECRETKEY }}
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_SECRETKEY }}
