--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
 		"postinstall": "prisma generate && prisma db push"
 	},
 	"dependencies": {
-		"@heroicons/react": "^2.0.13",
+		"@heroicons/react": "^2.0.16",
 		"@next-auth/prisma-adapter": "^1.0.5",
-		"@nextui-org/react": "^1.0.0-beta.10",
-		"@prisma/client": "^4.6.1",
+		"@nextui-org/react": "1.0.0-beta.12",
+		"@prisma/client": "^4.11.0",
 		"cuid": "^2.1.8",
 		"dotenv": "^16.0.3",
 		"google-auth-library": "^8.7.0",
@@ -21,31 +21,32 @@
 		"net": "^1.0.2",
 		"next": "^12.3.4",
 		"next-auth": "4.15.1",
-		"next-mdx-remote": "^4.2.0",
+		"next-connect": "^0.13.0",
+		"next-mdx-remote": "^4.4.1",
 		"next-themes": "^0.2.1",
 		"node-fetch": "^3.3.0",
-		"nodemailer": "^6.8.0",
+		"nodemailer": "^6.9.1",
 		"nodemailer-html-to-text": "^3.2.0",
 		"react": "^18.2.0",
-		"react-bootstrap": "^2.6.0",
+		"react-bootstrap": "^2.7.2",
 		"react-cookie": "^4.1.1",
-		"react-device-detect": "^2.2.2",
+		"react-device-detect": "^2.2.3",
 		"react-dom": "^18.2.0",
-		"react-icons": "^4.6.0",
+		"react-icons": "^4.8.0",
 		"segfault-handler": "^1.3.0",
 		"tls": "^0.0.1",
-		"validator": "^13.7.0"
+		"validator": "^13.9.0"
 	},
 	"devDependencies": {
 		"@types/node": "18.11.9",
 		"@types/react": "18.0.25",
-		"@types/validator": "^13.7.10",
+		"@types/validator": "^13.7.13",
 		"eslint": "8.26.0",
 		"eslint-config-next": "12.3.2",
-		"eslint-import-resolver-typescript": "^3.5.2",
-		"eslint-plugin-import": "^2.26.0",
+		"eslint-import-resolver-typescript": "^3.5.3",
+		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-simple-import-sort": "^8.0.0",
-		"prisma": "^4.6.1",
+		"prisma": "^4.11.0",
 		"typescript": "4.8.4"
 	},
 	"license": "GPL-3.0"
